tests/bad/bad013.lat
int main() {
      string x ;
      x = "pi" + 1 ;
      return 0 ;
}
